<resources>
    <string name="app_name">BluGoAI</string>
    <string name="about">About</string>
    <string name="title_activity_review_game">ReviewGameActivity</string>
    <string name="review_game">Review game</string>
    <string name="single_game">Single game</string>
    <string name="enable_discover">Enable discover</string>
    <string name="wait_game_request">Wait game request</string>
    <string name="request_game">Request game</string>
    <string name="variation">Variation</string>
    <string name="info">info</string>
    <string name="information">Information</string>
    <string name="rule">Rule</string>
    <string name="rule_japanese">Japanese</string>
    <string name="rule_chinese">Chinese</string>
    <string name="draw">Draw</string>
    <string name="resign">Resign</string>
    <string name="undo">Undo</string>
    <string name="pass">Pass</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="white_won_by">White won by</string>
    <string name="fmt_white_won_by">White won by %.1f</string>
    <string name="fmt_black_won_by">Black won by %.1f</string>
    <string name="fmt_white_won_by_short">W+%.1f</string>
    <string name="fmt_black_won_by_short">B+%.1f</string>
    <string name="fmt_white_won_by_2">White won by %s</string>
    <string name="fmt_black_won_by_2">Black won by %s</string>
    <string name="dead_black">Dead black</string>
    <string name="dead_white">Dead white</string>
    <string name="dead_black_short">bd</string>
    <string name="dead_white_short">wd</string>
    <string name="white_tr">White territory</string>
    <string name="black_tr">Black territory</string>
    <string name="white_tr_short">ws</string>
    <string name="black_tr_short">bs</string>
    <string name="live_white">Live W</string>
    <string name="live_black">Live B</string>
    <string name="komi">Komi</string>
    <string name="size">Size</string>
    <string name="handicap">Handicap</string>
    <string name="white_total">White total</string>
    <string name="black_total">Black total</string>
    <string name="result">Result</string>

    <string name="white_won_by_resign_short">W+R</string>
    <string name="black_won_by_resign_short">B+R</string>

    <string name="white_short">W</string>
    <string name="black_short">B</string>

    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="random">Random</string>

    <string name="game_setting">Game setting</string>

    <string name="waiting_request">Waiting request</string>
    <string name="W_B_SHORT">W/B</string>

    <string name="discover_device">Discover device</string>

    <string name="game_request_arrived">Game request arrived</string>

    <string name="your_color">Your color</string>

    <string name="accept">Accept</string>
    <string name="reject">Reject</string>

    <string name="question_accept_result">Accept result?</string>

    <string name="your_turn_black">Your turn(black)</string>
    <string name="your_turn_white">Your turn(white)</string>

    <string name="fmt_you_won_by">You(%s) won by resign</string>

    <string name="opponent_passed">Opponent passed</string>

    <string name="opponent_confirmed_result">Opponent confirmed result</string>
    <string name="opponent_declined_result">Opponent declined result</string>
    <string name="opponent_accepted_result">Opponent accepted result</string>
    <string name="game_finished">Game finished</string>
    <string name="refuse_undo_request_permanently">Refuse undo request permanently</string>
    <string name="your_undo_request_was_rejected">Your undo request was rejected</string>
    <string name="question_undo_request_accept_it">Undo request, accept it?</string>

    <string name="input_save_file_name">Input save file name</string>

    <string name="reset">reset</string>

    <string name="loading_sgf">Loading SGF</string>
    <string name="waiting_response">Waiting response</string>

    <string name="about_license">"         BluGo is free open-source program following BSD license.          You can download it's source from          <a>https://github.com/chykrkr/BluGo_Android</a>.          Any comments or recommendations are welcomed.            Copyright (c) 2016 chykrkr@gmail.com.          All rights reserved.            Redistribution and use in source and binary forms, with or without         modification, are permitted provided that the following conditions are met:          \t* Redistributions of source code must retain the above copyright         notice, this list of conditions and the following disclaimer.          \t* Redistributions in binary form must reproduce the above copyright         notice, this list of conditions and the following disclaimer in the         documentation and/or other materials provided with the distribution.          \t* Neither the name of the BluGo nor the         names of its contributors may be used to endorse or promote products         derived from this software without specific prior written permission.            THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS AS IS AND         ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED         WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE         DISCLAIMED. IN NO EVENT SHALL BluGo BE LIABLE FOR ANY         DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES         (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;         LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND         ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT         (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS         SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.     "</string>
    <string name="tvBLACK" >BLACK</string>
    <string name="tvWHITE">WHITE</string>
    <string name="ai">AI</string>
    <string name="human">Human</string>
</resources>
