<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.user.blugoAI.GoBoardActivity"
    android:background="#000000"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Turn: white, wd: 20, bd: 30"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </LinearLayout>

    <com.example.user.blugoAI.GoBoardView
        android:id="@+id/go_board_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.12"
        app:exampleDrawable="@drawable/board" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/button3"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:onClick="undo"
                android:text="@string/undo" />

            <Button
                android:id="@+id/button6"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:onClick="pass"
                android:text="@string/pass" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:onClick="save_SGF"
                android:text="@string/save" />

            <Button
                android:id="@+id/btn_resign"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:onClick="resign"
                android:text="@string/resign" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
