<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.user.blugo.BluetoothGameActivity"
    android:background="#000000"
    android:weightSum="1"
    tools:ignore="Overdraw">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_top"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Turn: white, wd: 20, bd: 30"
            android:id="@+id/text_info"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff"
            android:textSize="20dp"/>
    </LinearLayout>

    <com.example.user.blugo.GoBoardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/go_board_view"
        app:exampleDrawable="@drawable/board"
        android:layout_above="@+id/layout_bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layout_top"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_undo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="undo"
                android:text="@string/undo" />

            <Button
                android:id="@+id/btn_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="pass"
                android:text="@string/pass" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="save_SGF"
                android:text="@string/save" />

            <Button
                android:id="@+id/btn_resign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:onClick="resign"
                android:text="@string/resign" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:onClick="confirm_result"
                android:text="@string/confirm"
                android:visibility="visible" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>

